# airflow-maintenance-dags

./: README.md  pyproject.toml
etc/: requirements.dev.txt
src/: airflow.cfg  settings.py
src/dags/: airflow_clear_missing_dags.py  airflow_db_cleanup.py  airflow_kill_halted_tasks.py  airflow_log_cleanup.py
src/maintenance_dags/: __init__.py  airflow_clear_missing_dags.py  airflow_db_cleanup.py  airflow_kill_halted_tasks.py  airflow_log_cleanup.py
test/: __init__.py  conftest.py
test/dags/: test_airflow_clear_missing_dags.py  test_airflow_db_cleanup.py  test_airflow_log_cleanup.py
