[project]
name = "airflow_maintenance_dags"
version = "0.2.2"
description = "A series of DAGs to help maintain and clean up after the operations of an Airflow environment"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/oneaudience/airflow-maintenance-dags"

[build-system]
requires = ['setuptools>=61.0']
build-backend = "setuptools.build_meta"